# fflonk-prover

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  package-lock.json  package.json
.github/workflows/: ci.yml
circuits/: multiplier.circom  poseidon.circom  poseidon_input.json
docs/: benchmarks.md  cost-reduction-questions.md  dev-setup.md
docs/plans/: fflonk-prover-plan.md
docs/products/fflonk-prover/: fflonk-prover-spec.md
scripts/: regenerate-fixtures.sh  regenerate-kysigned-fixture.sh
src/: challenges.rs  kzg.rs  lib.rs  main.rs  poly.rs  proof.rs  prover.rs  transcript.rs  verifier.rs  vkey.rs  wtns.rs  zkey.rs
tests/: cli.rs  preprocessed_eval.rs  round1.rs  round2.rs  round3.rs  round4.rs  snarkjs_verify.rs
tests/fixtures/: README.md
tests/fixtures/kysigned/: .gitignore  README.md  Verifier.sol  fetch-fixture.sh  hashes.manifest  input.json  our_proof.json  our_public.json  reference_proof.json  reference_public.json  vkey.json  witness.wtns
tests/fixtures/multiplier/: circuit.zkey  multiplier.wasm  reference_proof.json  verifier.sol  vkey.json
tests/fixtures/poseidon/: circuit.zkey  poseidon.wasm  reference_proof.json  reference_public.json  verifier.sol  vkey.json  witness.wtns
